# bagman

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENCE  README.md  bagman.py  config.yaml  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard_pages/: 01_page_recordings.py  02_page_jobs.py  02_page_pipeline.py  03_page_upload.py  04_page_login.py  05_page_logout.py  dashboard_utils.py
pipeline/: flow_bagman.py  flow_default.py
resources/: recordings_example.json
src/bagman/: bagman.py
src/bagman/utils/: __init__.py  bagman_utils.py  db_utils.py  mcap_utils.py  schema_ros.py
src/bagman/utils/db/: __init__.py  bagman_db.py  db_factory.py  db_interface.py  elasticsearch_backend.py  mongodb_backend.py  tinydb_backend.py
utils/: bagman_utils.py  db_utils.py  mcap_utils.py  plot_utils.py
